Implement search functionality
Replaced groupie library with FastAdapter because the former doesn't natively support filtering.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="url_copied">URL copied to clipboard</string>
     <string name="expires">Expires</string>
     <string name="time_format">%1$s (%2$s)</string>
+    <string name="search">Search</string>
 </resources>
