Display custom properties

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,8 @@
     <string name="enable_secure_lock_screen">Secure lock screen hasn\'t been set up.\nGo to "Settings -> Security -> Screen lock" to set up a lock screen.</string>
     <string name="register_fingerprint">No fingerprint has been registered.\nGo to "Settings -> Security -> Fingerprint" and register at least one fingerprint.</string>
     <string name="enable_fingerprint">Fingerprint authentication</string>
-    <string name="show_password">Show password</string>
-    <string name="hide_password">Hide password</string>
+    <string name="show">Show</string>
+    <string name="hide">Hide</string>
     <string name="open_in_browser">Open in browser</string>
     <string name="username_copied">Username copied to clipboard</string>
     <string name="username">User Name</string>
@@ -44,4 +44,8 @@
     <string name="case_sensitive">Case sensitive</string>
     <string name="exclude_expired">Exclude expired</string>
     <string name="find_what">Find what</string>
+    <string name="property">Property</string>
+    <string name="property_copied">Property copied to clipboard</string>
+    <string name="show_all">Show all</string>
+    <string name="hide_all">Hide all</string>
 </resources>
