Add searching by custom properties

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="search">Search</string>
     <string name="search_in">Search in</string>
     <string name="title">Title</string>
-    <string name="extra_string_fields">Extra string fields</string>
+    <string name="properties">Properties</string>
     <string name="tags">Tags</string>
     <string name="group_name">Group name</string>
     <string name="options">Options</string>
