--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="property_copied">Property copied to clipboard</string>
     <string name="show_all">Show all</string>
     <string name="hide_all">Hide all</string>
+    <string name="search_in_recycle_bin">Search in Recycle Bin</string>
 </resources>
